
pyconfig_data = configuration_data({
  'ALIGNOF_LONG': cc.alignment('long'),
  'ALIGNOF_MAX_ALIGN_T':cc.alignment('max_align_t'),
  'ALIGNOF_SIZE_T': cc.alignment('size_t'),
  'DOUBLE_IS_LITTLE_ENDIAN_IEEE754': 1,
  'ENABLE_IPV6': 1,
  'HACL_CAN_COMPILE_SIMD128': 1,
  'HACL_CAN_COMPILE_SIMD256': 1,
  'HAVE_ACCEPT': 1,
  # 'HAVE_ACCEPT4': 1,
  'HAVE_ACOSH': 1,
  'HAVE_ADDRINFO': 1,
  'HAVE_ALARM': 1,
  'HAVE_ASINH': 1,
  'HAVE_ATANH': 1,
  'HAVE_BIND': 1,
  'HAVE_BIND_TEXTDOMAIN_CODESET': 1,
  'HAVE_BUILTIN_ATOMIC': 1,
  'HAVE_CHMOD': 1,
  'HAVE_CHOWN': 1,
  'HAVE_CHROOT': 1,
  'HAVE_CLOCK': 1,
  'HAVE_CLOCK_GETRES': 1,
  'HAVE_CLOCK_GETTIME': 1,
  'HAVE_CLOCK_NANOSLEEP': 1,
  'HAVE_CLOCK_SETTIME': 1,
  'HAVE_CLOCK_T': 1,
  'HAVE_CLOSEFROM': 1,
  # 'HAVE_CLOSE_RANGE': 1,
  'HAVE_COMPUTED_GOTOS': 1,
  'HAVE_CONFSTR': 1,
  'HAVE_CONNECT': 1,
  # 'HAVE_COPY_FILE_RANGE': 1,
  'HAVE_CTERMID': 1,
  'HAVE_CURSES_FILTER': 1,
  'HAVE_CURSES_HAS_KEY': 1,
  'HAVE_CURSES_IMMEDOK': 1,
  'HAVE_CURSES_IS_PAD': 1,
  'HAVE_CURSES_IS_TERM_RESIZED': 1,
  'HAVE_CURSES_RESIZETERM': 1,
  'HAVE_CURSES_RESIZE_TERM': 1,
  'HAVE_CURSES_SYNCOK': 1,
  'HAVE_CURSES_TYPEAHEAD': 1,
  'HAVE_CURSES_USE_ENV': 1,
  'HAVE_CURSES_WCHGAT': 1,
  'HAVE_DECL_RTLD_DEEPBIND': 1,
  'HAVE_DECL_RTLD_GLOBAL': 1,
  'HAVE_DECL_RTLD_LAZY': 1,
  'HAVE_DECL_RTLD_LOCAL': 1,
  'HAVE_DECL_RTLD_MEMBER': 0,
  'HAVE_DECL_RTLD_NODELETE': 1,
  'HAVE_DECL_RTLD_NOLOAD': 1,
  'HAVE_DECL_RTLD_NOW': 1,
  'HAVE_DEVICE_MACROS': 1,
  'HAVE_DEV_PTMX': 1,
  'HAVE_DIRENT_D_TYPE': 1,
  'HAVE_DIRFD': 1,
  'HAVE_DLOPEN': 1,
  'HAVE_DUP': 1,
  'HAVE_DUP2': 1,
  # 'HAVE_DUP3': 1,
  'HAVE_DYNAMIC_LOADING': 1,
  'HAVE_EPOLL': 1,
  'HAVE_EPOLL_CREATE1': 1,
  'HAVE_ERF': 1,
  'HAVE_ERFC': 1,
  'HAVE_EVENTFD': 1,
  'HAVE_EXECV': 1,
  'HAVE_EXPLICIT_BZERO': 1,
  'HAVE_EXPM1': 1,
  'HAVE_FACCESSAT': 1,
  'HAVE_FCHDIR': 1,
  'HAVE_FCHMOD': 1,
  'HAVE_FCHMODAT': 1,
  'HAVE_FCHOWN': 1,
  'HAVE_FCHOWNAT': 1,
  'HAVE_FDATASYNC': 1,
  'HAVE_FDOPENDIR': 1,
  'HAVE_FEXECVE': 1,
  'HAVE_FFI_CLOSURE_ALLOC': 1,
  'HAVE_FFI_PREP_CIF_VAR': 1,
  'HAVE_FFI_PREP_CLOSURE_LOC': 1,
  'HAVE_FLOCK': 1,
  'HAVE_FORK': 1,
  'HAVE_FORKPTY': 1,
  'HAVE_FPATHCONF': 1,
  'HAVE_FSEEKO': 1,
  'HAVE_FSTATAT': 1,
  'HAVE_FSTATVFS': 1,
  'HAVE_FSYNC': 1,
  'HAVE_FTELLO': 1,
  'HAVE_FTIME': 1,
  'HAVE_FTRUNCATE': 1,
  'HAVE_FUTIMENS': 1,
  'HAVE_FUTIMES': 1,
  'HAVE_FUTIMESAT': 1,
  'HAVE_GAI_STRERROR': 1,
  'HAVE_GCC_ASM_FOR_X64': 1,
  'HAVE_GCC_ASM_FOR_X87': 1,
  'HAVE_GCC_UINT128_T': 1,
  'HAVE_GETADDRINFO': 1,
  'HAVE_GETC_UNLOCKED': 1,
  'HAVE_GETEGID': 1,
  'HAVE_GETENTROPY': 1,
  'HAVE_GETEUID': 1,
  'HAVE_GETGID': 1,
  'HAVE_GETGRENT': 1,
  'HAVE_GETGRGID': 1,
  'HAVE_GETGRGID_R': 1,
  'HAVE_GETGRNAM_R': 1,
  'HAVE_GETGROUPLIST': 1,
  'HAVE_GETGROUPS': 1,
  'HAVE_GETHOSTBYADDR': 1,
  'HAVE_GETHOSTBYNAME': 1,
  'HAVE_GETHOSTBYNAME_R': 1,
  'HAVE_GETHOSTBYNAME_R_6_ARG': 1,
  'HAVE_GETHOSTNAME': 1,
  'HAVE_GETITIMER': 1,
  'HAVE_GETLOADAVG': 1,
  'HAVE_GETLOGIN': 1,
  'HAVE_GETNAMEINFO': 1,
  'HAVE_GETPAGESIZE': 1,
  'HAVE_GETPEERNAME': 1,
  'HAVE_GETPGID': 1,
  'HAVE_GETPGRP': 1,
  'HAVE_GETPID': 1,
  'HAVE_GETPPID': 1,
  'HAVE_GETPRIORITY': 1,
  'HAVE_GETPROTOBYNAME': 1,
  'HAVE_GETPWENT': 1,
  'HAVE_GETPWNAM_R': 1,
  'HAVE_GETPWUID': 1,
  'HAVE_GETPWUID_R': 1,
  'HAVE_GETRANDOM': 1,
  'HAVE_GETRANDOM_SYSCALL': 1,
  # 'HAVE_GETRESGID': 1,
  # 'HAVE_GETRESUID': 1,
  'HAVE_GETRUSAGE': 1,
  'HAVE_GETSERVBYNAME': 1,
  'HAVE_GETSERVBYPORT': 1,
  'HAVE_GETSID': 1,
  'HAVE_GETSOCKNAME': 1,
  'HAVE_GETSPENT': 1,
  'HAVE_GETSPNAM': 1,
  'HAVE_GETUID': 1,
  'HAVE_GETWD': 1,
  'HAVE_GRANTPT': 1,
  'HAVE_HSTRERROR': 1,
  'HAVE_HTOLE64': 1,
  'HAVE_IF_NAMEINDEX': 1,
  'HAVE_INET_ATON': 1,
  'HAVE_INET_NTOA': 1,
  'HAVE_INET_PTON': 1,
  'HAVE_INITGROUPS': 1,
  'HAVE_KILL': 1,
  'HAVE_KILLPG': 1,
  'HAVE_LCHOWN': 1,
  'HAVE_LIBDB': 1,
  'HAVE_LIBDL': 1,
  'HAVE_LIBSQLITE3': 1,
  'HAVE_LINK': 1,
  'HAVE_LINKAT': 1,
  'HAVE_LINUX_CAN_RAW_FD_FRAMES': 1,
  'HAVE_LINUX_CAN_RAW_JOIN_FILTERS': 1,
  'HAVE_LISTEN': 1,
  'HAVE_LOCKF': 1,
  'HAVE_LOG1P': 1,
  'HAVE_LOG2': 1,
  'HAVE_LOGIN_TTY': 1,
  'HAVE_LONG_DOUBLE': 1,
  'HAVE_LSTAT': 1,
  'HAVE_LUTIMES': 1,
  'HAVE_MADVISE': 1,
  'HAVE_MAKEDEV': 1,
  'HAVE_MBRTOWC': 1,
  # 'HAVE_MEMFD_CREATE': 1,
  # 'HAVE_MEMRCHR': 1,
  'HAVE_MKDIRAT': 1,
  'HAVE_MKFIFO': 1,
  'HAVE_MKFIFOAT': 1,
  'HAVE_MKNOD': 1,
  'HAVE_MKNODAT': 1,
  'HAVE_MKTIME': 1,
  'HAVE_MMAP': 1,
  # 'HAVE_MREMAP': 1,
  'HAVE_NANOSLEEP': 1,
  'HAVE_NCURSESW': 1,
  'HAVE_NICE': 1,
  'HAVE_OPENAT': 1,
  'HAVE_OPENDIR': 1,
  'HAVE_OPENPTY': 1,
  'HAVE_PANELW': 1,
  'HAVE_PATHCONF': 1,
  'HAVE_PAUSE': 1,
  'HAVE_PIPE': 1,
  # 'HAVE_PIPE2': 1,
  'HAVE_POLL': 1,
  'HAVE_POSIX_FADVISE': 1,
  'HAVE_POSIX_FALLOCATE': 1,
  'HAVE_POSIX_OPENPT': 1,
  'HAVE_POSIX_SPAWN': 1,
  'HAVE_POSIX_SPAWNP': 1,
  'HAVE_POSIX_SPAWN_FILE_ACTIONS_ADDCLOSEFROM_NP': 1,
  'HAVE_PREAD': 1,
  'HAVE_PREADV': 1,
  # 'HAVE_PREADV2': 1,
  # 'HAVE_PRLIMIT': 1,
  'HAVE_PROCESS_VM_READV': 1,
  'HAVE_PROTOTYPES': 1,
  'HAVE_PTHREAD_CONDATTR_SETCLOCK': 1,
  'HAVE_PTHREAD_GETCPUCLOCKID': 1,
  # 'HAVE_PTHREAD_GETNAME_NP': 1,
  'HAVE_PTHREAD_KILL': 1,
  # 'HAVE_PTHREAD_SETNAME_NP': 1,
  'HAVE_PTHREAD_SIGMASK': 1,
  'HAVE_PTSNAME': 1,
  # 'HAVE_PTSNAME_R': 1,
  'HAVE_PWRITE': 1,
  'HAVE_PWRITEV': 1,
  # 'HAVE_PWRITEV2': 1,
  'HAVE_READLINK': 1,
  'HAVE_READLINKAT': 1,
  'HAVE_READV': 1,
  'HAVE_REALPATH': 1,
  'HAVE_RECVFROM': 1,
  'HAVE_RENAMEAT': 1,
  'HAVE_RL_APPEND_HISTORY': 1,
  'HAVE_RL_CATCH_SIGNAL': 1,
  'HAVE_RL_COMPDISP_FUNC_T': 1,
  'HAVE_RL_COMPLETION_APPEND_CHARACTER': 1,
  'HAVE_RL_COMPLETION_DISPLAY_MATCHES_HOOK': 1,
  'HAVE_RL_COMPLETION_MATCHES': 1,
  'HAVE_RL_COMPLETION_SUPPRESS_APPEND': 1,
  'HAVE_RL_PRE_INPUT_HOOK': 1,
  'HAVE_RL_RESIZE_TERMINAL': 1,
  'HAVE_SCHED_GET_PRIORITY_MAX': 1,
  'HAVE_SCHED_RR_GET_INTERVAL': 1,
  'HAVE_SCHED_SETAFFINITY': 1,
  'HAVE_SCHED_SETPARAM': 1,
  'HAVE_SCHED_SETSCHEDULER': 1,
  # 'HAVE_SEM_CLOCKWAIT': 1,
  'HAVE_SEM_GETVALUE': 1,
  'HAVE_SEM_OPEN': 1,
  'HAVE_SEM_TIMEDWAIT': 1,
  'HAVE_SEM_UNLINK': 1,
  'HAVE_SENDFILE': 1,
  'HAVE_SENDTO': 1,
  'HAVE_SETEGID': 1,
  'HAVE_SETEUID': 1,
  'HAVE_SETGID': 1,
  'HAVE_SETGROUPS': 1,
  'HAVE_SETHOSTNAME': 1,
  'HAVE_SETITIMER': 1,
  'HAVE_SETLOCALE': 1,
  # 'HAVE_SETNS': 1,
  'HAVE_SETPGID': 1,
  'HAVE_SETPGRP': 1,
  'HAVE_SETPRIORITY': 1,
  'HAVE_SETREGID': 1,
  # 'HAVE_SETRESGID': 1,
  # 'HAVE_SETRESUID': 1,
  'HAVE_SETREUID': 1,
  'HAVE_SETSID': 1,
  'HAVE_SETSOCKOPT': 1,
  'HAVE_SETUID': 1,
  'HAVE_SETVBUF': 1,
  'HAVE_SHM_OPEN': 1,
  'HAVE_SHM_UNLINK': 1,
  'HAVE_SHUTDOWN': 1,
  'HAVE_SIGACTION': 1,
  'HAVE_SIGALTSTACK': 1,
  'HAVE_SIGFILLSET': 1,
  'HAVE_SIGINFO_T_SI_BAND': 1,
  'HAVE_SIGINTERRUPT': 1,
  'HAVE_SIGPENDING': 1,
  'HAVE_SIGRELSE': 1,
  'HAVE_SIGTIMEDWAIT': 1,
  'HAVE_SIGWAIT': 1,
  'HAVE_SIGWAITINFO': 1,
  'HAVE_SNPRINTF': 1,
  'HAVE_SOCKADDR_ALG': 1,
  'HAVE_SOCKADDR_STORAGE': 1,
  'HAVE_SOCKET': 1,
  'HAVE_SOCKETPAIR': 1,
  'HAVE_SOCKLEN_T': 1,
  # 'HAVE_SPLICE': 1,
  'HAVE_SSIZE_T': 1,
  'HAVE_STATVFS': 1,
  'HAVE_STAT_TV_NSEC': 1,
  'HAVE_STD_ATOMIC': 1,
  'HAVE_STRFTIME': 1,
  'HAVE_STRLCPY': 1,
  'HAVE_STRSIGNAL': 1,
  'HAVE_STRUCT_PASSWD_PW_GECOS': 1,
  'HAVE_STRUCT_PASSWD_PW_PASSWD': 1,
  'HAVE_STRUCT_STAT_ST_BLKSIZE': 1,
  'HAVE_STRUCT_STAT_ST_BLOCKS': 1,
  'HAVE_STRUCT_STAT_ST_RDEV': 1,
  'HAVE_STRUCT_TM_TM_ZONE': 1,
  'HAVE_SYMLINK': 1,
  'HAVE_SYMLINKAT': 1,
  'HAVE_SYNC': 1,
  'HAVE_SYSCONF': 1,
  'HAVE_SYSTEM': 1,
  'HAVE_TCGETPGRP': 1,
  'HAVE_TCSETPGRP': 1,
  'HAVE_TEMPNAM': 1,
  'HAVE_TIMEGM': 1,
  'HAVE_TIMERFD_CREATE': 1,
  'HAVE_TIMES': 1,
  'HAVE_TMPFILE': 1,
  'HAVE_TMPNAM': 1,
  'HAVE_TMPNAM_R': 1,
  'HAVE_TM_ZONE': 1,
  'HAVE_TRUNCATE': 1,
  'HAVE_TTYNAME': 1,
  'HAVE_UMASK': 1,
  'HAVE_UNAME': 1,
  'HAVE_UNLINKAT': 1,
  'HAVE_UNLOCKPT': 1,
  # 'HAVE_UNSHARE': 1,
  'HAVE_UTIMENSAT': 1,
  'HAVE_UTIMES': 1,
  'HAVE_UUID_GENERATE_TIME_SAFE': 1,
  'HAVE_VFORK': 1,
  'HAVE_WAIT': 1,
  'HAVE_WAIT3': 1,
  'HAVE_WAIT4': 1,
  'HAVE_WAITID': 1,
  'HAVE_WAITPID': 1,
  'HAVE_WCSCOLL': 1,
  'HAVE_WCSFTIME': 1,
  'HAVE_WCSXFRM': 1,
  'HAVE_WMEMCMP': 1,
  'HAVE_WORKING_TZSET': 1,
  'HAVE_WRITEV': 1,
  'HAVE_ZLIB_COPY': zlib_dep.found(),
  'HAVE___UINT128_T': 1,
  'MAJOR_IN_SYSMACROS': 1,
  'MVWDELCH_IS_EXPRESSION': 1,
  'PTHREAD_KEY_T_IS_COMPATIBLE_WITH_INT': 1,
  'PTHREAD_SYSTEM_SCHED_SUPPORTED': 1,
  'PYTHREAD_NAME_MAXLEN': 15,
  'PY_BUILTIN_HASHLIB_HASHES': '"md5,sha1,sha2,sha3,blake2"',
  'PY_COERCE_C_LOCALE': 1,
  'PY_HAVE_PERF_TRAMPOLINE': 1,
  'PY_SQLITE_HAVE_SERIALIZE': 1,
  'PY_SSL_DEFAULT_CIPHERS': 1,
  'PY_SUPPORT_TIER': 1,
  'Py_FFI_SUPPORT_C_COMPLEX': 1,
  'Py_HAVE_C_COMPLEX': 1,
  'Py_NORMALIZE_CENTURY': 1,
  'Py_STRFTIME_C99_SUPPORT': 1,
  'RETSIGTYPE': 'void',
  'SIZEOF_DOUBLE': cc.sizeof('double'),
  'SIZEOF_FLOAT': cc.sizeof('float'),
  'SIZEOF_FPOS_T': cc.sizeof('fpos_t'),
  'SIZEOF_INT': cc.sizeof('int'),
  'SIZEOF_LONG': cc.sizeof('long'),
  'SIZEOF_LONG_DOUBLE': cc.sizeof('long double'),
  'SIZEOF_LONG_LONG': cc.sizeof('long long'),
  'SIZEOF_OFF_T': cc.sizeof('off_t', prefix: '#include <sys/types.h>'),
  'SIZEOF_PID_T': cc.sizeof('pid_t', prefix: '#include <sys/types.h>'),
  'SIZEOF_PTHREAD_KEY_T': cc.sizeof('pthread_key_t', prefix: '#include <pthread.h>'),
  'SIZEOF_PTHREAD_T': cc.sizeof('pthread_t', prefix: '#include <pthread.h>'),
  'SIZEOF_SHORT': cc.sizeof('short'),
  'SIZEOF_SIZE_T': cc.sizeof('size_t'),
  'SIZEOF_TIME_T': cc.sizeof('time_t', prefix: '#include <time.h>'),
  'SIZEOF_UINTPTR_T': cc.sizeof('uintptr_t', prefix: '#include <stdint.h>'),
  'SIZEOF_VOID_P': cc.sizeof('void*'),
  'SIZEOF_WCHAR_T': cc.sizeof('wchar_t'),
  'SIZEOF__BOOL': cc.sizeof('_Bool'),
  'STDC_HEADERS': 1,
  'SYS_SELECT_WITH_SYS_TIME': 1,
  'WITH_DECIMAL_CONTEXTVAR': 1,
  'WITH_DOC_STRINGS': 1,
  'WITH_MIMALLOC': 1,
  'WITH_PYMALLOC': 1,
  '_DARWIN_C_SOURCE': 1,
  '_FILE_OFFSET_BITS': 64,
  '_LARGEFILE_SOURCE': 1,
  '_NETBSD_SOURCE': 1,
  '_POSIX_C_SOURCE': '200809L',
  '_PYTHONFRAMEWORK': '""',
  '_REENTRANT': 1,
  # '_XOPEN_SOURCE': 700,
  '_XOPEN_SOURCE_EXTENDED': 1,
  '__BSD_VISIBLE': 1,

  'AC_APPLE_UNIVERSAL_BUILD': false,
  'AIX_BUILDDATE': false,
  'AIX_GENUINE_CPLUSPLUS': false,
  'ALT_SOABI': false,
  'ANDROID_API_LEVEL': false,
  'DOUBLE_IS_ARM_MIXED_ENDIAN_IEEE754': false,
  'DOUBLE_IS_BIG_ENDIAN_IEEE754': false,
  'GETPGRP_HAVE_ARG': false,
  'HAVE_ALIGNED_REQUIRED': false,
  'HAVE_ALTZONE': false,
  'HAVE_BROKEN_MBSTOWCS': false,
  'HAVE_BROKEN_NICE': false,
  'HAVE_BROKEN_PIPE_BUF': false,
  'HAVE_BROKEN_POLL': false,
  'HAVE_BROKEN_POSIX_SEMAPHORES': false,
  'HAVE_BROKEN_PTHREAD_SIGMASK': false,
  'HAVE_BROKEN_SEM_GETVALUE': false,
  'HAVE_BROKEN_UNSETENV': false,
  'HAVE_CHFLAGS': false,
  'HAVE_CTERMID_R': false,
  'HAVE_DECL_TZNAME': false,
  'HAVE_DEV_PTC': false,
  'HAVE_DYLD_SHARED_CACHE_CONTAINS_PATH': false,
  'HAVE_EXPLICIT_MEMSET': false,
  'HAVE_FDWALK': false,
  'HAVE_FORK1': false,
  'HAVE_FSEEK64': false,
  'HAVE_FTELL64': false,
  'HAVE_GCC_ASM_FOR_MC68881': false,
  'HAVE_GETHOSTBYNAME_R_3_ARG': false,
  'HAVE_GETHOSTBYNAME_R_5_ARG': false,
  'HAVE_GLIBC_MEMMOVE_BUG': false,
  'HAVE_IPA_PURE_CONST_BUG': false,
  'HAVE_KQUEUE': false,
  'HAVE_LARGEFILE_SUPPORT': false,
  'HAVE_LCHFLAGS': false,
  'HAVE_LCHMOD': false,
  'HAVE_LIBDLD': false,
  'HAVE_LIBIEEE': false,
  'HAVE_LIBSENDFILE': false,
  'HAVE_NCURSES': false,
  'HAVE_NON_UNICODE_WCHAR_T_REPRESENTATION': false,
  'HAVE_PANEL': false,
  'HAVE_PLOCK': false,
  'HAVE_PTHREAD_COND_TIMEDWAIT_RELATIVE_NP': false,
  'HAVE_PTHREAD_DESTRUCTOR': false,
  'HAVE_PTHREAD_INIT': false,
  'HAVE_PTHREAD_STUBS': false,
  'HAVE_RTPSPAWN': false,
  'HAVE_SOCKADDR_SA_LEN': false,
  'HAVE_STAT_TV_NSEC2': false,
  'HAVE_STRUCT_STAT_ST_BIRTHTIME': false,
  'HAVE_STRUCT_STAT_ST_FLAGS': false,
  'HAVE_STRUCT_STAT_ST_GEN': false,
  'HAVE_TZNAME': false,
  'HAVE_USABLE_WCHAR_T': false,
  'HAVE_UUID_CREATE': false,
  'HAVE_UUID_ENC_BE': false,
  'HAVE__GETPTY': false,
  'MAJOR_IN_MKDEV': false,
  'PACKAGE_BUGREPORT': false,
  'PACKAGE_NAME': false,
  'PACKAGE_STRING': false,
  'PACKAGE_TARNAME': false,
  'PACKAGE_URL': false,
  'PACKAGE_VERSION': false,
  'POSIX_SEMAPHORES_NOT_ENABLED': false,
  'PYLONG_BITS_IN_DIGIT': false,
  'PY_SQLITE_ENABLE_LOAD_EXTENSION': false,
  'PY_SSL_DEFAULT_CIPHER_STRING': false,
  'Py_DEBUG': false,
  'Py_ENABLE_SHARED': false,
  'Py_GIL_DISABLED': false,
  'Py_HASH_ALGORITHM': false,
  'Py_RL_STARTUP_HOOK_TAKES_ARGS': false,
  'Py_STATS': false,
  'Py_SUNOS_VERSION': false,
  'Py_TRACE_REFS': false,
  'SETPGRP_HAVE_ARG': false,
  'SIGNED_RIGHT_SHIFT_ZERO_FILLS': false,
  'THREAD_STACK_SIZE': false,
  'TIMEMODULE_LIB': false,
  'TM_IN_SYS_TIME': false,
  'USE_COMPUTED_GOTOS': false,
  'WINDOW_HAS_FLAGS': false,
  'WITH_DTRACE': false,
  'WITH_DYLD': false,
  'WITH_EDITLINE': false,
  'WITH_LIBINTL': false,
  'WITH_NEXT_FRAMEWORK': false,
  'WITH_VALGRIND': false,
  'X87_DOUBLE_ROUNDING': false,
  '_BSD_SOURCE': false,
  '_INCLUDE__STDC_A1_SOURCE': false,
  '_LARGE_FILES': false,
  '_POSIX_THREADS': false,
  '_WASI_EMULATED_GETPID': false,
  '_WASI_EMULATED_PROCESS_CLOCKS': false,
  '_WASI_EMULATED_SIGNAL': false,
})

# copied as-is from configure.ac
check_headers_str = '''
  alloca.h asm/types.h bluetooth.h conio.h direct.h dirent.h dlfcn.h endian.h errno.h fcntl.h grp.h
  io.h langinfo.h libintl.h libutil.h linux/auxvec.h sys/auxv.h linux/can/raw.h linux/fs.h linux/limits.h linux/memfd.h
  linux/netfilter_ipv4.h linux/random.h linux/soundcard.h
  linux/tipc.h linux/wait.h netdb.h net/ethernet.h net/if.h netinet/in.h netpacket/packet.h poll.h process.h pthread.h pty.h
  sched.h setjmp.h shadow.h signal.h spawn.h stropts.h sys/audioio.h sys/bsdtty.h sys/devpoll.h
  sys/endian.h sys/epoll.h sys/event.h sys/eventfd.h sys/file.h sys/ioctl.h sys/kern_control.h
  sys/loadavg.h sys/lock.h sys/memfd.h sys/mkdev.h sys/mman.h sys/modem.h sys/param.h sys/pidfd.h sys/poll.h
  sys/random.h sys/resource.h sys/select.h sys/sendfile.h sys/socket.h sys/soundcard.h sys/stat.h
  sys/statvfs.h sys/sys_domain.h sys/syscall.h sys/sysmacros.h sys/termio.h sys/time.h sys/times.h sys/timerfd.h
  sys/types.h sys/uio.h sys/un.h sys/utsname.h sys/wait.h sys/xattr.h sysexits.h syslog.h
  termios.h util.h utime.h utmp.h wchar.h
'''
check_headers = check_headers_str.replace('  ', ' ').replace('\n', '').split(' ')

foreach h : check_headers
  def_name = h.underscorify().to_upper()
  pyconfig_data.set(f'HAVE_@def_name@', cc.has_header(h))
endforeach

# undefined because found in headers, what it is it supposed to be defined to remains unknown

# clock_t
# const
# gid_t
# mode_t
# off_t
# pid_t
# signed
# size_t
# socklen_t
# uid_t